dev/test_programs/INVALID/group5/scanner_literal_rune_too_long.go
package scanner_literal_rune_too_long

// Can't have more than 1 char in it!
var r rune = 'a\''

